# lite-xl.github.io

./: .editorconfig  .gitignore  404.html  CONTRIBUTING.md  README.md  fix-keymap.py  index.html  mkdocs.yml  package-lock.json  package.json  posts.json  pyproject.toml  requirements.txt  run.sh  sitemap.txt  sitemap.xml
.github/workflows/: build.yml  deploy.yml  generate_keymap.yaml  generate_keymap.yml
about/contributors/: index.html
about/faq/: index.html
about/features/: index.html
about/screenshots/: index.html
about/wontdo/: index.html
assets/: keymap-macos.json  keymap.json  plugins-highlight.css  plugins-markdown.css  plugins.css  plugins.js
assets/javascript/: custom.min.js
assets/javascripts/: custom.min.js
assets/stylesheets/: custom.min.css
developer-guide/background-tasks/: index.html
developer-guide/child-processes/: index.html
developer-guide/classes-and-objects/: index.html
developer-guide/commands/: index.html
developer-guide/creating-syntaxes/: index.html
developer-guide/creating-themes/: index.html
developer-guide/debugging/: index.html
developer-guide/documents/: index.html
developer-guide/interacting-with-the-os/: index.html
developer-guide/introduction/: index.html
developer-guide/managing-keyboard-shortcuts/: index.html
developer-guide/renderer-internals/: index.html
developer-guide/simple-plugin/: index.html
developer-guide/using-regular-expressions/: index.html
developer-guide/views/: index.html
developer-guide/views-toolbarview/: index.html
docs/: getting-started.md  index.md
docs/.include/: keyboard_renderer.j2
docs/about/: contributors.md  (+4 more)
getting-started/: index.html
javascripts/: search.6b108b.min.js  search.d34b6a.min.js  wade.min.646f31.min.js  wade.min.66c7cc.min.js  wade.min.938547.min.js
overrides/: home.html  main.html
search/: search_index.json
stylesheets/: extra.45e4da.min.css  extra.52a80c.min.css  extra.761eae.min.css  extra.a58208.min.css  extra.b986bb.min.css  extra.css  extra.e889a5.min.css  extra.ebe1c9.min.css
(+150 files in other folders)
