[tool.poetry]
name = "lite-xl-docs"
version = "0.1.0"
description = "The website for Lite XL."
authors = ["takase1121 <20792268+takase1121@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^9.5.8"
Pillow = "^9.4.0"
CairoSVG = "^2.6.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-glightbox = "^0.3.1"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-minify-plugin = {git = "https://github.com/takase1121/mkdocs-minify-plugin.git", rev = "workaround-pathlib-glob-not-supporting-dir-symlinks"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
